updated paths and start contact form

--- a/source/index.html
+++ b/source/index.html
@@ -48,7 +48,7 @@
             <a href="restaurant.html" class="nav-link">Where to find us</a>
           </li>
           <li class="nav-item">
-            <a href="contact.html" class="nav-link">Contact</a>
+            <a href="contact.php" class="nav-link">Contact</a>
           </li>
         </ul>
       </div>
@@ -61,7 +61,7 @@
 
   <div class="jumbotron jumbotron-fluid" style="background-image: url('banner.jpg');">
     <div class="container">
-      <img src="logo2.png" alt="logo" class="img-responsive">
+      <img src="./pictures/logo.png" alt="logo" class="img-responsive">
     </div>
   </div>
   
