--- a/source/restaurant.html
+++ b/source/restaurant.html
@@ -39,7 +39,7 @@
             <a href="index.html" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
-            <a href="menu.html" class="nav-link">Menu</a>
+            <a href="menu.php" class="nav-link">Menu</a>
           </li>
           <li class="nav-item">
             <a href="pictures.html" class="nav-link">Pictures</a>
@@ -48,7 +48,7 @@
             <a href="restaurant.html" class="nav-link">Where to find us</a>
           </li>
           <li class="nav-item">
-            <a href="contact.html" class="nav-link">Contact</a>
+            <a href="contact.php" class="nav-link">Contact</a>
           </li>
         </ul>
       </div>
@@ -70,7 +70,7 @@
 
       <div class="col-lg-6">
         <div class="info">
-        <img src="logo2.png" class="img-fluid" alt="Logo">
+        <img src="./pictures/logored.png" class="img-fluid" alt="Logo">
         <h3><b>Address:</b></h3>
         <h4>5 Foster Lane, 
         <br>London EC2V 6HH, UK</h4>
