--- a/source/contact.html
+++ b/source/contact.html
@@ -39,7 +39,7 @@
             <a href="index.html" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
-            <a href="menu.html" class="nav-link">Menu</a>
+            <a href="menu.php" class="nav-link">Menu</a>
           </li>
           <li class="nav-item">
             <a href="pictures.html" class="nav-link">Pictures</a>
