--- a/source/pictures.html
+++ b/source/pictures.html
@@ -48,7 +48,7 @@
             <a href="restaurant.html" class="nav-link">Where to find us</a>
           </li>
           <li class="nav-item">
-            <a href="contact.php" class="nav-link">Contact</a>
+            <a href="contact.html" class="nav-link">Contact</a>
           </li>
         </ul>
       </div>
