--- a/source/contact.html
+++ b/source/contact.html
@@ -61,7 +61,7 @@
 
 <form>
 <div class="container text-center">  
-    <img src="logo2.png" class="img-fluid" alt="Logo">
+    <img src="./pictures/logo.png" class="img-fluid" alt="Logo">
     <h4><b>We'd love to hear from you</b></h4>
 </div>  
 
